# vorpy

./: .gitignore  LICENSE.txt  Manifest.toml  Project.toml  README.md  biot_savart.ipynb  bs_weight_function.ipynb  fp_vortex_ring.ipynb  jit_error.jl  juliacall_test.ipynb  lamb_oseen_vortex (K C's conflicted copy 2024-03-16).ipynb  lamb_oseen_vortex.ipynb  profiling_juliacall.ipynb  pyproject.toml  scipy_ode_solver_practice.ipynb  test_import.ipynb  test_import.py  vorpy.py  vortex_dynamics_muvi.ipynb  vortex_ring_fps.ipynb  vortex_ring_video.ipynb
OLD_DELETE_PYTHON/: OLD_vorpy_cuda.py  OLD_vortex_ring.ipynb
julia/: Manifest.toml  Project.toml  julia_env.jl  vortex_path_dynamics_cpu.jl
julia_fns/: Manifest.toml  julia_env.jl  weighted_biot_savart_solver_cpu.jl  weighted_biot_savart_solver_cuda.jl
julia_src/: OLD_biot_savart_integrator.jl  bernstein_polynomial_weight.jl  biot_savart.jl  biot_savart_cuda.jl  biot_savart_segment_integrator.jl  biot_savart_solver.jl  biot_savart_solver_vortex_line.jl  biot_savart_test_script.jl  core_weight.jl  dormand_prince_method.jl  environment_variables.jl  vortex_path_dynamics.jl  vortex_path_dynamics_kernel_cpu.jl  vortex_segment_models.jl  weight_function.jl  weighted_biot_savart_kernel_cpu.jl  weighted_biot_savart_kernel_cuda.jl  weighted_biot_savart_solver_cpu.jl  weighted_biot_savart_solver_cuda.jl
scrtwrk/: lamb-oseen_test.ipynb  lamb-oseen_test.py  wbs_integrator_test.jl
tests/: __init__.py
vrtx_ring_fps/: fieldpoints.vtp  vel_num.csv  vel_num_2024_03_19.csv  vortex_ring_2024_03_19.csv  vortex_ring_2024_03_19.vtp  vortex_ring_2024_03_19_2.csv  vortex_ring_2024_03_19_2.vtp
(+110 files in other folders)
